cmake_minimum_required(VERSION 3.14.0)

add_subdirectory(./asynccall)
add_subdirectory(./channel)
add_subdirectory(./comutex)
add_subdirectory(./task)
add_subdirectory(./cowaitgroup)
add_subdirectory(./awaitable)
add_subdirectory(./server)
add_subdirectory(./redis)
add_subdirectory(./mysql)
add_subdirectory(./http)
add_subdirectory(./udpclient)
add_subdirectory(./udpserver)


