cmake_minimum_required(VERSION 3.14.0)

add_subdirectory(./asynccall)
add_subdirectory(./channel)
add_subdirectory(./comutex)
add_subdirectory(./task)
add_subdirectory(./cowaitgroup)
add_subdirectory(./awaitable)
add_subdirectory(./cotcp)
add_subdirectory(./redis)
add_subdirectory(./mysql)
add_subdirectory(./http)
add_subdirectory(./nghttp)
add_subdirectory(./coudp)
add_subdirectory(./nocopy)
add_subdirectory(./cossl)
add_subdirectory(./sleep)
add_subdirectory(./statable)
add_subdirectory(./zookeeper)
add_subdirectory(./parse_dns)
add_subdirectory(./curl)

